tests/invalid/scoping/out_of_scope.rs
/*
fail: 1
*/

main(): int {
    {
        a: int = 2;
    }
    return a;
}